<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textSize="32sp"
        android:textColor="#339933"
        android:layout_marginTop="50dp"
        android:text="@string/lisa_spordiala" />

    <Spinner
        android:id="@+id/sport"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="#fff1f1f1"
        android:popupBackground="#fff1f1f1" />

    <Spinner
        android:id="@+id/raskustase"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#fff1f1f1"
        android:popupBackground="#fff1f1f1"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/lisa"
        android:id="@+id/button2"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="#40bf40"
        android:stateListAnimator="@null"
        android:textColor="#fff"
        android:nestedScrollingEnabled="false"
        android:onClick="addSports" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lisatud_spordiala"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#818081"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/sportsText"
        android:layout_gravity="center_horizontal"
        android:textColor="#339933" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/edasi"
            android:textColor="#fff"
            android:id="@+id/button3"
            android:layout_marginTop="40dp"
            android:background="#40bf40"
            android:stateListAnimator="@null"
            android:layout_marginLeft="260dp"
            android:onClick="createLocation"
            android:layout_gravity="top|right" />

    </LinearLayout>

</LinearLayout>