...
    <string name="mees">Mees</string>
    <string name="naine">Naine</string>
    <string name="parool1">Parool</string>
    <string name="parool2">Parool uuesti</string>

    <string name="lisa_spordiala">Lisa spordiala</string>
    <string name="lisatud_spordiala">Lisatud spordiala:</string>
    <string name="lisa">Lisa</string>
    <string name="edasi">Edasi</string>
    <string name="lisapilt">Lisa pilt</string>
    <string name="lisauuspilt">Lisa uus pilt</string>
    <string name="jatavahele">Jäta vahele</string>
    <string name="lisa_asukoht">Lisa asukoht</string>
...
    <string name="pwLength">Parool peab olema vähemalt 6 tähemärki pikk</string>

    <string name="osale">Osale</string>
    <string name="korraldaja">Korraldaja:</string>
    <string name="wait">Palun oota</string>
    <string name="vajutamataNupp">Lisa spordiala!</string>
    <string name="valimataSport">Spordiala või tase on jäänud valimata!</string>
    <string name="success">Osaled sellel treeningul</string>
    <string name="lahku">Lahku</string>
    <string name="cancel">Tagasi</string>
    <string name="kinnitaOsalemine">Oled kindel, et soovid sellel treeningul osaleda?</string>
    <string name="kinnitaLahkumine">Oled kindel, et ei soovi sellel treeningul osaleda?</string>

...
